--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,9 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" type="text/css" href="@routes.Assets.versioned("lib/purecss/build/pure.css")">
+        <link rel="stylesheet" media="screen" type="text/css" href="@routes.Assets.versioned("lib/purecss/build/grids.css")">
+        <link rel="stylesheet" media="screen" type="text/css" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
     </head>
