Force usernames to be unique

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
         <div class="pure-u-1-5"></div>
         <div id="main-app" class="pure-u-3-5">
             <p>Send a username to "log in," and then you'll be able to chat!</p>
-            <ul id="chat-log">
+            <ul id="chat-log" class="hidden">
             </ul>
             <form id="chat-submit" class="pure-form">
                 <input type="text" id="chat-box" />
